*Fixed bug where selecting and displacing an array within a GOP (or double GOP) doubly displaces its array data when tabwrite is being activated using metro. Made array labels always visible by inverting their color based on the background graph color (most commonly a problem with a solid colored bar graph). Updated TODO.

--- a/pd/nw/css/common.css
+++ b/pd/nw/css/common.css
@@ -103,3 +103,9 @@
     fill: #46d5cf;
     stroke-width: 1;
 }
+
+.graph_label {
+    font-weight: bold;
+    filter: invert(1);
+    mix-blend-mode: difference;
+}
